# escambo

./: .gitignore  CODE_OF_CONDUCT.md  README.md  io.github.cleomenezesjr.Escambo.Devel.json  io.github.cleomenezesjr.Escambo.json  io.github.cleomenezesjr.GetOverHere.json  meson.build  meson_options.txt
.github/: FUNDING.yml
.github/workflows/: build_flatpak.yml
build-aux/meson/: postinstall.py
data/: escambo.gresource.xml  escambo.gresource.xml.in  io.github.cleomenezesjr.Escambo.appdata.xml.in  io.github.cleomenezesjr.Escambo.desktop.in  io.github.cleomenezesjr.Escambo.gschema.xml  io.github.cleomenezesjr.Escambo.gschema.xml.in  io.github.cleomenezesjr.Escambo.metainfo.xml.in  io.github.cleomenezesjr.GetOverHere.appdata.xml.in  io.github.cleomenezesjr.GetOverHere.desktop.in  io.github.cleomenezesjr.GetOverHere.gschema.xml  meson.build
data/icons/: meson.build
data/ui/: meson.build  window.blp
po/: LINGUAS  POTFILES  de.po  meson.build  pt_BR.po  tr.po
src/: check_url.py  commom_scripts.py  common_scripts.py  curl_parser.py  date-row.blp  date_row.py  define.py.in  dialog_auths.py  dialog_body.py  dialog_cookies.py  dialog_headers.py  dialog_import.py  environments.py  escambo.gresource.xml  escambo.in  getoverhere.gresource.xml  getoverhere.in  main.py  meson.build  populator-entry.blp  populator-entry.ui  populator_entry.py  restapi.py  sourceview.py  style.css  window.blp  window.py  window.ui
src/gtk/: date-row.blp  dialog-auth.blp  dialog-body.blp  dialog-cookies.blp  dialog-headers.blp  dialog-import.blp  environments.blp  help-overlay.ui  populator-entry.blp  window.blp
subprojects/: blueprint-compiler.wrap
